<?xml version="1.0"?>
<package format="2">
  <name>pathgen</name>
  <version>0.0.0</version>
  <description>Your mom's spline</description>

  <author email="nic.r.fischer@gmail.com">Nic Fischer</author>
  <maintainer email="nic.r.fischer@gmail.com">Nic Fischer</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>eigen_catkin</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>eigen_checks</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
